--- a/src/app/public/covid/covid.component.html
+++ b/src/app/public/covid/covid.component.html
@@ -1,1 +1,74 @@
-<p>covid works!</p>
+<div class="container bg-white">
+    <br>
+    <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-4 bg-warning border border-success">
+            <form>
+                <div class="row justify-content-center bg-dark text-white ">
+                    <h4 class="p-2">Estadisticas por paises</h4>
+                </div>
+                <div class="form-group">
+                    <label for="txtpais">Pais</label>
+                    <select class="form-control">
+                        <option>Argentina</option>
+                        <option>Bolivia</option>
+                        <option>Brasil</option>
+                        <option>Chile</option>
+                        <option>Colombia</option>
+                        <option>Ecuador</option>
+                        <option>Paraguay</option>
+                        <option>Peru</option>
+                        <option>Uruguay</option>
+                        <option>Venezuela</option>
+                    </select>
+                    <br>
+                    <div class="form-check">
+                        <input id="my-input" class="form-check-input" type="checkbox" name="" value="true">
+                        <label for="my-input" class="form-check-label">Casos Confirmados</label>
+                    </div>
+                    <br>
+                    <div class="form-check">
+                        <input id="curados" class="form-check-input" type="checkbox" name="" value="true">
+                        <label for="curados" class="form-check-label">Curados</label>
+                    </div>
+                    <br>
+                    <div class="form-check">
+                        <input id="fellecidos" class="form-check-input" type="checkbox" name="" value="true">
+                        <label for="fellecidos" class="form-check-label">Fallecidos</label>
+                    </div>
+                    <br>
+                    <button class="text-white btn btn-dark" type="submit">Consultar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <br>
+
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h5 class="p-2">Estadisticas Covid19</h5>
+        </div>
+        <div class="table-wrapper-scroll-y my-custom-scrollbar col-md-8 ">
+            <table class="table  table-striped mb-1">
+                <thead>
+                    <tr class="thead-dark">
+                        <th>Ubicacion</th>
+                        <th>Infectados</th>
+                        <th>Curados</th>
+                        <th>Fallecidos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <tbody>
+                    <tr *ngFor="let item of vectorCovid;let i=index">
+                        <td><i *ngIf="i==0" class="fas fa-globe-europe"></i>{{item.Country_text}}</td>
+                        <td>{{item.Total_Cases_text}}</td>
+                        <td>{{item.Total_Recovered_text}}</td>
+                        <td>{{item.Total_Deaths_text}}</td>
+                    </tr>
+                    
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
